# OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
LibOpenGL/: CMakeLists.txt
LibOpenGL/include/LibOpenGL/: Bindable.h  Camera.h  Defines.h  FrameBuffer.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  Utils.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  View.h
LibOpenGL/include/stb/: stb_image.h
LibOpenGL/res/shaders/: InversionShader.shader  Shader.shader
LibOpenGL/src/: Camera.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Utils.cpp  VertexArray.cpp  VertexBuffer.cpp  View.cpp
Projects/Base/: CMakeLists.txt
Projects/Base/src/: main.cpp
Projects/FrameBuffer/: CMakeLists.txt
Projects/FrameBuffer/src/: main.cpp
